# obscura

./: .gitignore  Cargo.toml  Makefile  README.MD  README.md  docker-compose.yml  mix.exs
lib/: obscura.ex
lib/obscura/: camera.ex  geometry.ex  integrator.ex  kernel.ex  scene.ex  window.ex
lib/obscura/integrator/: whitted.ex
lib/obscura/window/: x11.ex
res/: cone.glb  cylinder.glb  icosphere.glb  suzanne.glb  torus.glb
src/: camera.rs  geometry.rs  geometry.wgsl  lib.rs  lighting.rs  lighting.wgsl  main.rs  present.rs  present.wgsl  renderer.rs  scene.rs  x11.c
test/: obscura_test.exs
test/obscura/: geometry_test.exs
