[package]
name = "obscura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
gltf = { version = "1.3.0", features = ["KHR_lights_punctual"] }
image = "0.24.7"
legion = "0.4.0"
log = "0.4.20"
nalgebra = "0.32.3"
petgraph = "0.6.4"
pollster = "0.3.0"
wgpu = "^0.17.0"
winit = "0.28.6"
